welcome.lessons.welcome.array.island.Island.scala.error
island:2: error: identifier expected but integer literal found.
  var A:Int ==0
              ^